--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ header {
   float: right;
   position: absolute;
   right: 200px;
+  cursor: pointer;
 }
 
 .login a {
@@ -42,9 +43,8 @@ header {
 }
 
 .login img {
-  width: 100px;
-  height: 30px;
-  background-color: #ccc;
+  width: 45px;
+  height: 45px;
 }
 
 .menu {
@@ -117,4 +117,55 @@ span.arrow-down {
   height: 20%;
   width: 13%;
   cursor: pointer;
+}
+
+.barra-pesquisa {
+  position: absolute;
+  top: 300px;
+  right: 450px;
+  text-align: center;
+}
+
+.barra-pesquisa img {
+  width: 250px;
+  height: 50px;
+  background-color: #ccc;
+  margin: 0 auto;
+  position: relative;
+  left: 200px;
+  margin-bottom: 25px;
+}
+
+.barra-pesquisa p {
+  font-size: 20px;
+  font-weight: 400;
+  font-style: oblique;
+  font-variant: small-caps;
+  font-stretch: semi-expanded;
+  width: 740px;
+  position: relative;
+  left: 220px;
+  margin-bottom: 30px;
+}
+
+.barra-pesquisa input[type="text"] {
+  width: 100%;
+  height: 50px;
+  padding: 15px;
+  outline: 0;
+  border-radius: 7px;
+  border-color: rgb(155, 150, 150);
+  color: #3c4449;
+  background-color: #f9f9f9;
+  position: relative;
+  left: 220px;
+}
+
+.barra-pesquisa .img-pesquisa {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  left: 920px;
+  top: 145px;
+  background-color: white;
 }
