--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ header {
   float: right;
   position: absolute;
   right: 200px;
-  cursor: pointer;
 }
 
 .login a {
@@ -89,7 +88,7 @@ span {
   height: 0px;
   border: 5px solid transparent;
   position: absolute;
-  left: 265px;
+  left: 348px;
   top: 58px;
 }
 
@@ -121,7 +120,7 @@ span.arrow-down {
 
 .barra-pesquisa {
   position: absolute;
-  top: 300px;
+  top: 290px;
   right: 450px;
   text-align: center;
 }
@@ -168,4 +167,127 @@ span.arrow-down {
   left: 920px;
   top: 145px;
   background-color: white;
+}
+
+.cadastro {
+  position: relative;
+  top: 10px;
+}
+
+label {
+  margin-right: 300px;
+}
+
+.form-login {
+  position: absolute;
+  left: 500px;
+  top: 400px;
+  border: 1px solid #ccc;
+  width: 350px;
+  height: 300px;
+  padding: 30px;
+  border-radius: 6px;
+  padding: 10px 16px 16px;
+  margin-bottom: 30px;
+}
+
+.form-login .input-login {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  border: 1px solid #ccc;
+  outline: 0;
+  margin-bottom: 30px;
+}
+
+.form-login .input-senha {
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  border: 1px solid #ccc;
+  outline: 0;
+}
+
+.esqueci-senha {
+  margin-right: 150px;
+  position: absolute;
+  top: 210px;
+}
+
+.btn-entrar {
+  margin-top: 50px;
+  width: 100%;
+  height: 15%;
+  border-radius: 8px;
+  border: 0;
+  background-color: #326db1;
+  color: white;
+}
+
+.btn-entrar:hover {
+  background-color: blue;
+}
+
+h2 {
+  position: absolute;
+  top: 250px;
+  left: 350px;
+  font-size: 30px;
+}
+
+.p-login {
+  position: absolute;
+  top: 350px;
+  left: 400px;
+  font-size: 20px;
+}
+
+.cadastro p {
+  position: absolute;
+  top: 700px;
+  left: 570px;
+  font-size: 27px;
+}
+
+.cadastro button {
+  width: 200px;
+  height: 50px;
+  border-radius: 8px;
+  border: 0;
+  background-color: white;
+  color: #4a90e2;
+  position: absolute;
+  top: 750px;
+  left: 580px;
+  border: 2px solid #4a90e2;
+}
+
+.cadastro button:hover {
+  background-color: blue;
+  color: white;
+  border: 0;
+}
+
+footer {
+  width: 100%;
+  background-color: #ccc;
+  position: absolute;
+  top: 850px;
+  height: 15%;
+}
+
+footer p {
+  float: right;
+  margin-top: 30px;
+  margin-right: 30px;
+}
+
+footer img {
+  background-color: black;
+  width: 200px;
+  height: 50px;
+  float: left;
+  margin: 15px;
 }
