--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ span.arrow-down {
 
 .cadastro {
   position: relative;
-  top: 10px;
+  top: 5px;
 }
 
 label {
@@ -233,7 +233,7 @@ label {
 h2 {
   position: absolute;
   top: 250px;
-  left: 350px;
+  left: 370px;
   font-size: 30px;
 }
 
@@ -247,12 +247,12 @@ h2 {
 .cadastro p {
   position: absolute;
   top: 700px;
-  left: 570px;
+  left: 550px;
   font-size: 27px;
 }
 
 .cadastro button {
-  width: 200px;
+  width: 350px;
   height: 50px;
   border-radius: 8px;
   border: 0;
@@ -260,7 +260,7 @@ h2 {
   color: #4a90e2;
   position: absolute;
   top: 750px;
-  left: 580px;
+  left: 500px;
   border: 2px solid #4a90e2;
 }
 
@@ -290,4 +290,194 @@ footer img {
   height: 50px;
   float: left;
   margin: 15px;
+}
+
+.cadastro-titulo p {
+  position: relative;
+  top: 270px;
+  left: 370px;
+  width: 800px;
+  font-size: 22px;
+  font-weight: lighter;
+}
+
+.cadastro-usuario {
+  width: 45%;
+  float: left;
+  height: 60%;
+  background-color: rgb(221, 216, 216);
+  position: absolute;
+  top: 450px;
+  left: 100px;
+}
+
+.cadastro-usuario img {
+  position: relative;
+  left: 240px;
+  top: 20px;
+}
+
+.cadastro-usuario h2 {
+  position: absolute;
+  top: 130px;
+  left: 190px;
+}
+
+.cadastro-usuario p {
+  width: 450px;
+  position: absolute;
+  top: 180px;
+  left: 100px;
+  font-size: 21px;
+}
+
+.cadastro-usuario button {
+  width: 70%;
+  height: 15%;
+  border-radius: 8px;
+  border: 0;
+  background-color: #326db1;
+  color: white;
+  position: relative;
+  top: 270px;
+  right: 30px;
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+.cadastro-usuario button:hover {
+  background-color: blue;
+}
+
+.cadastro-empresa {
+  width: 40%;
+  float: right;
+  height: 60%;
+  background-color: rgb(221, 216, 216);
+  position: absolute;
+  top: 450px;
+  left: 750px;
+}
+
+.cadastro-empresa img {
+  position: relative;
+  left: 240px;
+  top: 20px;
+}
+
+.cadastro-empresa h2 {
+  position: absolute;
+  top: 130px;
+  left: 190px;
+}
+
+.cadastro-empresa p {
+  width: 450px;
+  position: absolute;
+  top: 180px;
+  left: 100px;
+  font-size: 21px;
+}
+
+.cadastro-empresa button {
+  width: 75%;
+  height: 15%;
+  border-radius: 8px;
+  border: 0;
+  background-color: #326db1;
+  color: white;
+  position: relative;
+  top: 270px;
+  right: 30px;
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+.cadastro-empresa button:hover {
+  background-color: blue;
+}
+
+.form-usuario {
+  padding: 30px;
+  max-width: 50%;
+  position: absolute;
+  left: 350px;
+  top: 300px;
+  bottom: -300px;
+  margin-bottom: 80px;
+  background-color: #ccc;
+}
+
+.form-usuario .input-nome {
+  width: 50%;
+  height: 40px;
+  padding: 10px;
+  border-radius: 5px;
+  margin-right: 43px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.form-usuario .input-cpf {
+  width: 140px;
+  height: 40px;
+  border-radius: 5px;
+  padding: 10px;
+  display: block;
+}
+
+.form-usuario .data-nascimento {
+  position: relative;
+  bottom: 85px;
+  left: 190px;
+}
+
+.form-usuario .input-nascimento {
+  width: 110px;
+  height: 40px;
+  border-radius: 5px;
+  padding: 10px;
+  position: relative;
+  bottom: 40px;
+  right: 260px;
+}
+
+.form-usuario .genero {
+  position: relative;
+  bottom: 30px;
+}
+
+.form-usuario .masculino {
+  position: relative;
+  bottom: 5px;
+}
+
+.form-usuario .radio-masculino {
+  position: relative;
+  right: 350px;
+  bottom: 25px;
+}
+
+.form-usuario .feminino {
+  position: relative;
+  bottom: 38px;
+  left: 100px;
+}
+
+.form-usuario .radio-feminino {
+  position: relative;
+  right: 240px;
+  bottom: 58px;
+}
+
+.form-usuario .outros {
+  position: relative;
+  left: 200px;
+  bottom: 70px;
+}
+
+.form-usuario .radio-outros {
+  position: relative;
+  right: 130px;
+  bottom: 90px;
 }
