--- a/css/style.css
+++ b/css/style.css
@@ -83,39 +83,40 @@ header {
   text-decoration: none;
 }
 
-span {
+.arrow-down {
   width: 0px;
   height: 0px;
   border: 5px solid transparent;
   position: absolute;
   left: 348px;
   top: 58px;
-}
-
-span.arrow-down {
   border-top-color: rgb(27, 75, 209);
 }
 
-.menu-item {
-  max-width: 25%;
-  margin-top: 30px;
-}
-
-#categoria-item {
-  font-size: 14px;
-  position: relative;
-  left: 195px;
-  top: 160px;
-  margin-top: -15px;
-  list-style-type: none;
+#menu-dropdown {
   display: none;
 }
 
-#categoria-item:hover {
+.categoria-item {
+  font-size: 14px;
+  position: relative;
+  left: 275px;
+  top: 160px;
+  margin-top: -15px;
+  list-style-type: none;
+  z-index: 999;
+  background-color: rgb(27, 75, 209);
+  width: 10%;
+  color: white;
+  z-index: 999;
+}
+
+.categoria-item:hover {
   background-color: rgb(27, 207, 57);
   height: 20%;
-  width: 13%;
+  width: 10%;
   cursor: pointer;
+  display: block;
 }
 
 .barra-pesquisa {
@@ -302,7 +303,7 @@ footer img {
 }
 
 .cadastro-usuario {
-  width: 45%;
+  width: 42%;
   float: left;
   height: 60%;
   background-color: rgb(221, 216, 216);
@@ -324,7 +325,7 @@ footer img {
 }
 
 .cadastro-usuario p {
-  width: 450px;
+  width: 434px;
   position: absolute;
   top: 180px;
   left: 100px;
@@ -350,7 +351,7 @@ footer img {
 }
 
 .cadastro-empresa {
-  width: 40%;
+  width: 42%;
   float: right;
   height: 60%;
   background-color: rgb(221, 216, 216);
@@ -401,7 +402,7 @@ footer img {
   padding: 30px;
   max-width: 50%;
   position: absolute;
-  left: 350px;
+  left: 420px;
   top: 200px;
   bottom: -300px;
   margin-bottom: 100px;
@@ -425,7 +426,7 @@ footer img {
   bottom: 110px;
 }
 
-.form-usuario .input-cpf {
+.form-usuario #input-cpf {
   width: 133px;
   height: 40px;
   border-radius: 5px;
@@ -442,7 +443,7 @@ footer img {
   left: 480px;
 }
 
-.form-usuario .input-nascimento {
+.form-usuario #input-nascimento {
   width: 110px;
   height: 40px;
   border-radius: 5px;
@@ -501,29 +502,35 @@ footer img {
 .form-usuario .select-estado {
   position: relative;
   bottom: 180px;
-  right: 30px;
+  right: 40px;
+  text-transform: uppercase;
+  height: 40px;
+  border-radius: 5px;
 }
 
 .form-usuario .cidade {
   position: relative;
   bottom: 260px;
-  left: 450px;
+  left: 490px;
 }
 
 .form-usuario .select-cidade {
   position: relative;
-  bottom: 210px;
-  left: 100px;
+  bottom: 220px;
+  left: 130px;
+  text-transform: uppercase;
+  height: 40px;
+  border-radius: 5px;
 }
 
 .form-usuario .email {
   position: relative;
-  bottom: 180px;
+  bottom: 210px;
 }
 
-.form-usuario .input-email {
+.form-usuario #input-email {
   position: relative;
-  bottom: 170px;
+  bottom: 210px;
   right: 5px;
   width: 50%;
   text-transform: uppercase;
@@ -533,23 +540,18 @@ footer img {
 
 .form-usuario .celular {
   position: relative;
-  bottom: 265px;
+  bottom: 300px;
   left: 330px;
 }
 
 .form-usuario .input-celular {
   position: relative;
-  bottom: 250px;
+  bottom: 260px;
   text-transform: uppercase;
   border-radius: 5px;
-  width: 50%;
-  left: 320px;
+  width: 23%;
+  left: -25px;
   padding: 10px;
-}
-
-.form-usuario .senha {
-  position: relative;
-  bottom: 230px;
 }
 
 .form-usuario .input-senha {
